prevent margin from wrapping around

--- a/include/css/login.css
+++ b/include/css/login.css
@@ -70,6 +70,7 @@
 	color:#555;
 	margin-right:15px;
 	white-space:nowrap;
+	display: inline-block;
 	}
 
 #browser_warning{
